Fix problems with tables on small screens

--- a/src/components/navigation/Navbar.module.css
+++ b/src/components/navigation/Navbar.module.css
@@ -13,7 +13,7 @@
 .navbar a {
     float: left;
     color: #f2f2f2;
-    padding: 14px 16px;
+    padding: 14px 16px 0px 16px;
     text-decoration: none;
     font-size: 1.2rem;
     margin: 5px 2.5px 0px 2.5px;
