--- a/src/components/table/TableHeader.module.css
+++ b/src/components/table/TableHeader.module.css
@@ -9,7 +9,3 @@
 .header tr th:first-child {
     padding: 20px;
 }
-
-.header tr th {
-    padding-right: 20px;
-}
