--- a/src/components/table/TableRow.module.css
+++ b/src/components/table/TableRow.module.css
@@ -5,6 +5,9 @@
 .row td {
     padding: 20px 20px 20px 0px;
     border-bottom: 1px solid var(--primary-hover);
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
 }
 
 .row td:first-child {
